add test cases for ~~deleted text~~ and :"inline quotation":

--- a/Tests/Fixtures/Expected/004-combo.html
+++ b/Tests/Fixtures/Expected/004-combo.html
@@ -1,3 +1,5 @@
 <h1>Page title</h1>
 
 <p>And <strong>now</strong> for something <em>completely</em> different.</p>
+
+<p>Also include <del>deleted text</del> and <q>inline quotation</q>.</p>
